fixed student integration